Добавляет форму подписки в футер

--- a/css/styles.css
+++ b/css/styles.css
@@ -58,6 +58,7 @@ p {
   display: inline-block;
   border: none;
   border-radius: 4px;
+  overflow:hidden;
   cursor: pointer;
 }
 
@@ -68,7 +69,7 @@ p {
 }
 
 .section.no-padding {
-  padding-top: 0px;
+  padding-top: 0;
 }
 
 .section-title {
@@ -140,7 +141,7 @@ p {
 .menu-link,
 .header-contacts-link {
   display: block;
-  padding: 32px 0px;
+  padding: 32px 0;
   transition: color 250ms var(--transition);
 }
 
@@ -175,7 +176,6 @@ p {
 
 .menu-item.current::after {
   display: block;
-  /* margin-top: 27px; */
   content: "";
   width: 100%;
   height: 4px;
@@ -284,6 +284,41 @@ p {
   fill: var(--secondary-text-color);
 }
 
+.subscription {
+  margin-top: 15px;
+  margin-left: 92px;
+}
+
+.subscription-form {
+  position: relative;
+  display: flex;
+  align-items: center;
+}
+
+.subscription-form-input {
+  width: 358px;
+  height: 50px;
+  padding: 15px;
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  filter: drop-shadow(0 4px 4px rgba(0, 0, 0, 0.15));
+  border-radius: 4px;
+  background-color: transparent;
+  font-size: 16px;
+  line-height: 1.25;
+  color: rgba(255, 255, 255, 0.6);
+}
+
+.subscription-form-btn {
+  min-width: 200px;
+  padding: 10px 28px;
+  margin-left: 12px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+
+  box-shadow: 0 4px 4px rgba(0, 0, 0, 0.15);
+}
+
 /* ========== HERO ========== */
 .hero {
   max-width: 1600px;
@@ -301,7 +336,7 @@ p {
   background-position: center;
   background-size: cover;
   border: 1px solid #000000;
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
   text-align: center;
 }
 
@@ -321,7 +356,10 @@ p {
 
 .modal-btn {
   padding: 10px 32px;
+}
 
+.modal-btn,
+.subscription-form-btn {
   background-color: var(--accent-color);
   color: var(--secondary-text-color);
   font-family: var(--main-font);
@@ -334,7 +372,9 @@ p {
 }
 
 .modal-btn:hover,
-.modal-btn:focus {
+.modal-btn:focus,
+.subscription-form-btn:hover,
+.subscription-form-btn:focus {
   background-color: var(--button-hover-color);
 }
 
@@ -376,8 +416,8 @@ p {
 
 .work-desc-box {
   position: absolute;
-  bottom: 0px;
-  left: 0px;
+  bottom: 0;
+  left: 0;
   width: 100%;
   height: 70px;
 
@@ -406,9 +446,9 @@ p {
   flex-basis: calc((100% - 120px) / 4);
 
   background-color: var(--secondary-text-color);
-  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
-    0px 2px 1px rgba(0, 0, 0, 0.2);
-  border-radius: 0px 0px 4px 4px;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 1px rgba(0, 0, 0, 0.14),
+    0 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 0 0 4px 4px;
 }
 
 .member-photo {
@@ -539,8 +579,8 @@ p {
 .gallery-btn:hover {
   background-color: var(--accent-color);
   color: var(--secondary-text-color);
-  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
-    0px 2px 2px rgba(0, 0, 0, 0.12);
+  box-shadow: 0 3px 1px rgba(0, 0, 0, 0.1), 0 1px 2px rgba(0, 0, 0, 0.08),
+    0 2px 2px rgba(0, 0, 0, 0.12);
 }
 
 .gallery-item {
@@ -555,7 +595,7 @@ p {
 
 .gallery-link:hover,
 .gallery-link:focus {
-  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.12), 0 4px 4px rgba(0, 0, 0, 0.06),
     1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
@@ -642,8 +682,8 @@ p {
   height: 580px;
   padding: 8px;
   background-color: var(--secondary-text-color);
-  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
-    0px 2px 1px rgba(0, 0, 0, 0.2);
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 1px rgba(0, 0, 0, 0.14),
+    0 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
 }
 
